refactor: fix systemd service enabling in Ansible provisioning
- Replace loop with individual service tasks to avoid systemd module error
- Module doesn't support list syntax for enabling multiple services

--- a/infra/packer/images/ansible.cfg
+++ b/infra/packer/images/ansible.cfg
@@ -1,5 +1,11 @@
 [defaults]
-# Increase parallelism
+# Mitogen configuration - Provides 5-20x speedup for Ansible playbooks
+# Install: ./scripts/install-mitogen.sh
+# Or manually: wget https://files.pythonhosted.org/packages/source/m/mitogen/mitogen-0.3.27.tar.gz
+strategy_plugins = /Users/Webber/mitogen/mitogen-0.3.27/ansible_mitogen/plugins/strategy
+strategy = mitogen_linear
+
+# Increase parallelism (forks only helps with multiple hosts, not single Packer builds)
 forks = 50
 pipelining = True
 gathering = smart
@@ -10,7 +16,8 @@ fact_caching_timeout = 3600
 # Performance optimizations
 host_key_checking = False
 callback_whitelist = profile_tasks
-stdout_callback = yaml
+stdout_callback = default
+result_format = yaml
 
 # SSH optimizations
 [ssh_connection]
