--- a/infra/packer/modules/alloy/alloy-consul-template.service
+++ b/infra/packer/modules/alloy/alloy-consul-template.service
@@ -15,6 +15,9 @@ Documentation=https://github.com/hashicorp/consul-template
 Requires=network-online.target consul.service
 After=network-online.target consul.service
 Before=alloy.service
+# Only start this service in production (not during Packer builds)
+# The /etc/packer_build marker exists during builds and is removed before snapshot
+ConditionPathExists=!/etc/packer_build
 
 [Service]
 Type=simple
