--- a/infra/packer/modules/alloy/alloy.service
+++ b/infra/packer/modules/alloy/alloy.service
@@ -3,6 +3,9 @@ Description=Grafana Alloy
 Documentation=https://grafana.com/docs/alloy/
 After=docker.service alloy-consul-template.service
 Wants=docker.service alloy-consul-template.service
+# Only start this service in production (not during Packer builds)
+# The /etc/packer_build marker exists during builds and is removed before snapshot
+ConditionPathExists=!/etc/packer_build
 
 [Service]
 Type=simple
