--- a/infra/packer/modules/doctl/docker-login.service
+++ b/infra/packer/modules/doctl/docker-login.service
@@ -1,6 +1,9 @@
 [Unit]
 Description=Login to DigitalOcean Docker Registry
 After=docker.service
+# Only start this service in production (not during Packer builds)
+# The /etc/packer_build marker exists during builds and is removed before snapshot
+ConditionPathExists=!/etc/packer_build
 
 [Service]
 Type=oneshot
