--- a/infra/packer/modules/grafana/docker-compose.service
+++ b/infra/packer/modules/grafana/docker-compose.service
@@ -1,7 +1,10 @@
 [Unit]
 Description=Docker Compose Application Service
 Requires=docker.service
-After=docker.service consul.service consul-template.service
+After=docker.service docker-consul-template.service
+# Only start this service in production (not during Packer builds)
+# The /etc/packer_build marker exists during builds and is removed before snapshot
+ConditionPathExists=!/etc/packer_build
 
 [Service]
 Type=oneshot
