--- a/infra/packer/images/neo4j/playbook.yml
+++ b/infra/packer/images/neo4j/playbook.yml
@@ -7,6 +7,9 @@
     region: "{{ region | default('sgp1') }}"
 
   tasks:
+    # Prevent services from starting during build
+    - include_tasks: ../shared/tasks/packer-build-start.yml
+
     # Neo4j-specific Docker Compose template
     - name: Copy Neo4j Docker Compose template
       copy:
@@ -56,3 +59,7 @@
     # Trim filesystem to minimize snapshot size
     - name: Trim filesystem
       command: fstrim -av
+
+    # Note: We do NOT remove the packer_build marker here
+    # It needs to stay until after the snapshot to prevent services from starting
+    # It will be removed on first boot in production via cloud-init
